<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuildUpDomino</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_build_up">BuildUp</string>
    <string name="title_activity_draw_first">DrawFirst</string>
    <string name="temp">Temp</string>
    <string name="draw">Draw</string>
    <string name="result">Result</string>
    <string name="playerTurn">Result</string>
    <string name="confirm">Confirm Move</string>
    <string name="help">Help</string>
    <string name="pass">Pass</string>
    <string name="save">Save</string>
    <string name="compScore">Computer Score: </string>
    <string name="humScore">Your Score: </string>
    <string name="humWins">Your Wins: </string>
    <string name="comWins">Computer Wins: </string>
    <string name="title_activity_loag_game">LoagGame</string>
     <string name="restart">Restart</string>

    
</resources>
